--- a/.drone.yml
+++ b/.drone.yml
@@ -43,7 +43,7 @@ steps:
   image: rust:1.46
   commands:
     - mkdir -p artifacts/$(cat .tags)
-    - cp target/meta-matrix artifacts/$(cat .tags)
+    - cp target/release/meta-matrix artifacts/$(cat .tags)
 
 - name: upload-artifacts
   image: plugins/s3
@@ -91,6 +91,6 @@ steps:
 
 ---
 kind: signature
-hmac: 92b051a194f055d0f480821f900776c2ffc4b287e69c13a9bb4fd3101531449a
+hmac: a467bd0d37c886129054ed258367dd2ff30d8ceb5fc613ef48ef9617a9ea857e
 
 ...
