--- a/.drone.yml
+++ b/.drone.yml
@@ -55,6 +55,7 @@ steps:
       from_secret: s3_secret_key
     source: artifacts/*
     target: artifacts/
+    region: nl-ams
     endpoint: https://s3.nl-ams.scw.cloud
 
 ---
@@ -91,6 +92,6 @@ steps:
 
 ---
 kind: signature
-hmac: 1f3e7a4f29e041e78d5efc218c2a78bb6c00619aea95b2b3aea9600900df2298
+hmac: 3a31ee5609d8ec1f61e73b64c1c8439302abce4d7070104e50587e334a0b8de7
 
 ...
