--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,7 @@ steps:
   environment:
     CARGO_HOME: /tmp/cargo-cache
   commands:
+    - apt update && apt install -y lld
     - cargo build
 
 - name: test
@@ -92,6 +93,6 @@ steps:
 
 ---
 kind: signature
-hmac: 15e164954d16e196c73721ce28b3efd15d009efd158ae07d68d0d8c64d43ab09
+hmac: 45857f94b769784c6ff105776c39d159725b7cd9978260ee2f6899ba7a1d9239
 
 ...
