--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ thiserror = "1.0"
 anyhow = "1.0"
 url = "2.1.1"
 log = { version = "0.4.11", features = ["release_max_level_warn"] }
-env_logger = "0.7.1"
+pretty_env_logger = "0.4"
 lazy_static = "1.4.0"
 async-trait = "0.1"
 reqwest = { version = "0.10.8", features = ["gzip", "blocking"] }
