--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ async-trait = "0.1"
 reqwest = { version = "0.10.8", features = ["gzip", "blocking"] }
 rink-core = { version = "0.5" }
 matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk", version = "0.1" }
+scraper = "0.12"
 
 [dependencies.matrix-sdk]
 default-features = false
